--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Bujamin Sheapi</h3>
-								<span class="position mb-2">Electical Engineer</span>
+								<span class="position mb-2">Electrical Engineer</span>
 								<div class="faded">
 									<p></p>
 	              </div>
