--- a/mk.html
+++ b/mk.html
@@ -65,8 +65,9 @@
 									<li><a class="page-scroll" href="#about">За Нас</a></li>
 									<li><a class="page-scroll" href="#contact">Контакт</a></li>
 									<li><a class="page-scroll">|</a></li>
-									<li><a class="page-scroll" href="al.html">AL</a></li>
-									<li><a class="page-scroll" href="mk.html">MK</a></li>
+									<li><a class="page-scroll" href="al.html">ЕН</a></li>
+									<li><a class="page-scroll" href="al.html">АЛ</a></li>
+									<li><a class="page-scroll" href="mk.html">МК</a></li>
 									
 								</ul>
 							</div><!-- /.navbar-collapse -->
@@ -384,7 +385,11 @@
 	        <ul class="list-unstyled">
 	            <li class="active"><a class="offcanvas-link" href="#page-top">Почетна<span class="sr-only">(current)</span></a></li>
 	            <li><a class="offcanvas-link" href="#about">За Нас</a></li>
-	            <li><a class="offcanvas-link" href="#contact">Контакт</a></li>
+				<li><a class="offcanvas-link" href="#contact">Контакт</a></li>
+				<li><a class="offcanvas-link">Одбери Јазик</a></li>
+				<li><a class="offcanvas-link" href="al.html">АЛ</a></li>
+				<li><a class="offcanvas-link" href="mk.html">МК</a></li>
+
 	        </ul>
       	</div><!-- .offcanvas-menu -->
 	</div><!-- /st-container -->
