--- a/al.html
+++ b/al.html
@@ -65,6 +65,7 @@
 									<li><a class="page-scroll" href="#about">Per ne</a></li>
 									<li><a class="page-scroll" href="#contact">Kontakt</a></li>
 									<li><a class="page-scroll">|</a></li>
+									<li><a class="page-scroll" href="index.html">EN</a></li>
 									<li><a class="page-scroll" href="al.html">AL</a></li>
 									<li><a class="page-scroll" href="mk.html">MK</a></li>
 									
@@ -384,7 +385,11 @@
 	        <ul class="list-unstyled">
 	            <li class="active"><a class="offcanvas-link" href="#page-top">Fillimi<span class="sr-only">(current)</span></a></li>
 	            <li><a class="offcanvas-link" href="#about">Për Ne </a></li>
-	            <li><a class="offcanvas-link" href="#contact">Kontakt</a></li>
+				<li><a class="offcanvas-link" href="#contact">Kontakt</a></li>
+				<li><a class="offcanvas-link">Zgjidh Gjuhen</a></li>
+				<li><a class="offcanvas-link" href="index.html">ЕН</a></li>
+				<li><a class="offcanvas-link" href="al.html">AL</a></li>
+				<li><a class="offcanvas-link" href="mk.html">MK</a></li>
 	        </ul>
       	</div><!-- .offcanvas-menu -->
 	</div><!-- /st-container -->
