--- a/index.html
+++ b/index.html
@@ -384,8 +384,12 @@
 	        <ul class="list-unstyled">
 	            <li class="active"><a class="offcanvas-link" href="#page-top">Home<span class="sr-only">(current)</span></a></li>
 	            <li><a class="offcanvas-link" href="#about">About</a></li>
-	            <li><a class="offcanvas-link" href="#contact">Contact</a></li>
-	        </ul>
+				<li><a class="offcanvas-link" href="#contact">Contact</a></li>
+				<li><a class="offcanvas-link">Select Language</a></li>
+				<li><a class="offcanvas-link" href="index.html">EN</a></li>
+				<li><a class="offcanvas-link" href="al.html">AL</a></li>
+				<li><a class="offcanvas-link" href="mk.html">MK</a></li>
+			</ul>
       	</div><!-- .offcanvas-menu -->
 	</div><!-- /st-container -->
 
