--- a/al.html
+++ b/al.html
@@ -387,9 +387,9 @@
 	            <li><a class="offcanvas-link" href="#about">Për Ne </a></li>
 				<li><a class="offcanvas-link" href="#contact">Kontakt</a></li>
 				<li><a class="offcanvas-link">Zgjidh Gjuhen</a></li>
-				<li><a class="offcanvas-link" href="index.html">ЕН</a></li>
-				<li><a class="offcanvas-link" href="al.html">AL</a></li>
-				<li><a class="offcanvas-link" href="mk.html">MK</a></li>
+				<li><a class="" href="index.html">ЕN</a></li>
+				<li><a class="" href="al.html">AL</a></li>
+				<li><a class="" href="mk.html">MK</a></li>
 	        </ul>
       	</div><!-- .offcanvas-menu -->
 	</div><!-- /st-container -->
