--- a/mk.html
+++ b/mk.html
@@ -387,8 +387,9 @@
 	            <li><a class="offcanvas-link" href="#about">За Нас</a></li>
 				<li><a class="offcanvas-link" href="#contact">Контакт</a></li>
 				<li><a class="offcanvas-link">Одбери Јазик</a></li>
-				<li><a class="offcanvas-link" href="al.html">АЛ</a></li>
-				<li><a class="offcanvas-link" href="mk.html">МК</a></li>
+				<li><a class="" href="index.html">EН</a></li>
+				<li><a class="" href="al.html">АЛ</a></li>
+				<li><a class="" href="mk.html">МК</a></li>
 
 	        </ul>
       	</div><!-- .offcanvas-menu -->
