--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
 	            <li><a class="offcanvas-link" href="#about">About</a></li>
 				<li><a class="offcanvas-link" href="#contact">Contact</a></li>
 				<li><a class="offcanvas-link">Select Language</a></li>
-				<li><a class="offcanvas-link" href="index.html">EN</a></li>
-				<li><a class="offcanvas-link" href="al.html">AL</a></li>
-				<li><a class="offcanvas-link" href="mk.html">MK</a></li>
+				<li><a class="" href="index.html">EN</a></li>
+				<li><a class="" href="al.html">AL</a></li>
+				<li><a class="" href="mk.html">MK</a></li>
 			</ul>
       	</div><!-- .offcanvas-menu -->
 	</div><!-- /st-container -->
