--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 							<div class="col-sm-3 col-md-3">
 								<div class="footer-widget">
 									<h3>Get in Touch</h3>
-									<a href="tel:">+389 (0)76 360 575</a>
+									<a href="tel:76360575">+389 (0)76 360 575</a>
 									<a href="mailto:bujamin@vezesharri.com.mk">bujamin@vezesharri.com.mk</a>
 
 									
