--- a/de.html
+++ b/de.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 	<head>
 	    <meta charset="utf-8">
@@ -55,20 +55,20 @@
 		                          <i class="fa fa-bars"></i>
 		                        </button>
 							    <!-- offcanvas-trigger-effects -->
-								<h1 class="logo"><a class="navbar-brand" href="mk.html"><img src="img/logo.png" alt=""></a></h1>
+								<h1 class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a></h1>
 							</div>
 
 							<!-- Collect the nav links, forms, and other content for toggling -->
 							<div class="collapse navbar-collapse navbar-collapse">
 								<ul class="nav navbar-nav navbar-right">
-									<li><a class="page-scroll" href="#home">Почетна</a></li>
-									<li><a class="page-scroll" href="#about">За Нас</a></li>
-									<li><a class="page-scroll" href="#contact">Контакт</a></li>
-									<li><a class="page-scroll">|</a></li>
-									<li><a class="page-scroll" href="index.html">ЕН</a></li>
-									<li><a class="page-scroll" href="de.html">ДЕ</a></li>
-									<li><a class="page-scroll" href="al.html">АЛ</a></li>
-									<li><a class="page-scroll" href="mk.html">МК</a></li>
+									<li><a class="page-scroll" href="#home">Home</a></li>
+									<li><a class="page-scroll" href="#about">Über Uns</a></li>
+									<li><a class="page-scroll" href="#contact">Kontakt</a></li>
+                                    <li><a class="page-scroll">|</a></li>
+                                    <li><a class="page-scroll" href="index.html">EN</a></li>
+                                    <li><a class="page-scroll" href="de.html">DE</a></li>
+									<li><a class="page-scroll" href="al.html">AL</a></li>
+									<li><a class="page-scroll" href="mk.html">MK</a></li>
 									
 								</ul>
 							</div><!-- /.navbar-collapse -->
@@ -94,9 +94,9 @@
 
 				            <div class="container">
 				                <div class="carousel-caption">
-				                    <h1 class="animated lightSpeedIn">НИЕ СМЕ ПРВАТА БИОГАЗ ЦЕНТРАЛА БО НАШАТА ЗЕМЈА</h1>
+				                    <h1 class="animated lightSpeedIn">WIR SIND DIE ERSTE BIOGASANLAGE IN UNSEREM LAND</h1>
 
-				                    <p class="lead animated lightSpeedIn">Ние ја просветлуваме вашата иднина</p>
+				                    <p class="lead animated lightSpeedIn">Wir beleuchten Ihre Zukunft</p>
 
 				                </div>
 				                <!--.carousel-caption-->
@@ -112,9 +112,9 @@
 				            <div class="container">
 				                <div class="carousel-caption">
 
-				                    <h1 class="animated bounceIn">НИЕ ПРОИЗВЕДУВАМЕ ЕЛЕКТРИЧА ЕНЕРГИЈА СО БИСОКОКВАЛИТЕТЕН БИОГАС</h1>
+				                    <h1 class="animated bounceIn">WIR PRODUZIEREN STROM MIT HOCHWERTIGEM BIOGAS</h1>
 
-				                    <p class="lead animated bounceIn">Ние ја просветлуваме вашата иднина</p>
+				                    <p class="lead animated bounceIn">Wir beleuchten Ihre Zukunft</p>
 				                </div>
 				                <!--.carousel-caption-->
 				            </div>
@@ -127,11 +127,11 @@
 				    <!-- Controls -->
 				    <a class="left carousel-control" href="#x-corp-carousel" role="button" data-slide="prev">
 				        <i class="fa fa-angle-left" aria-hidden="true"></i>
-				        <span class="sr-only">претходно</span>
+				        <span class="sr-only">Vorig</span>
 				    </a>
 				    <a class="right carousel-control" href="#x-corp-carousel" role="button" data-slide="next">
 				        <i class="fa fa-angle-right" aria-hidden="true"></i>
-				        <span class="sr-only">другиот</span>
+				        <span class="sr-only">Nächster</span>
 				    </a>
 				</div>
                  <!-- /end slider section -->
@@ -141,7 +141,7 @@
 			        <div class="container">
 		              	<div class="row text-center">
 		                	<div class="col-xs-12">
-		                  		<h2 class="section-title wow zoomIn">Нашиот процес на работа</h2>
+		                  		<h2 class="section-title wow zoomIn">Unser Arbeitsprozess</h2>
 		                	</div>
 		              	</div> <!-- /.row -->
 
@@ -149,25 +149,25 @@
 					      	<div class="col-xs-6 col-sm-3">
 					       		<div class="process-circle wow zoomIn">
 					          		<a><img src="img/meet.png" alt=""></a>
-					          		<span>Средба</span>
+					          		<span>Treffen</span>
 					        	</div><!-- /.circle -->
 					      	</div><!-- /.col-sm-3 -->
 					      	<div class="col-xs-6 col-sm-3">
 					       		<div class="process-circle wow zoomIn">
 					          		<a><img src="img/planting.png" alt=""></a>
-					          		<span>Садење</span>
+					          		<span>Pflanzen</span>
 					        	</div><!-- /.circle -->
 					      	</div><!-- /.col-sm-3 -->
 					      	<div class="col-xs-6 col-sm-3">
 					       		<div class="process-circle wow zoomIn">
 					          		<a><img src="img/harvesting.png" alt=""></a>
-					          		<span>Жетва</span>
+					          		<span>Ernte</span>
 					        	</div><!-- /.circle -->
 					      	</div><!-- /.col-sm-3 -->
 					      	<div class="col-xs-6 col-sm-3">
 					       		<div class="process-circle wow zoomIn">
 					          		<a><img src="img/produced.png" alt=""></a>
-					          		<span>Производство</span>
+					          		<span>Produziert</span>
 					        	</div><!-- /.circle -->
 					      	</div><!-- /.col-sm-3 -->
 						</div><!-- /.row -->
@@ -181,10 +181,10 @@
 			        <div class="container">
 		              	<div class="row text-center">
 		                	<div class="col-xs-12">
-		                  		<h2 class="section-title wow zoomIn">Нашата Историја</h2>
+		                  		<h2 class="section-title wow zoomIn">Unsere Geschichte</h2>
 		                  		<div class="team-intro wow zoomIn">
-		                  			<p>Формирањето на првата компанија за производство на електрична енергија за биогас беше одлучено во 2013 година. Одлучивме да произведуваме електрична енергија од природен отпад. Ова беше инвестиција од 5 милиони евра. Но, сонот за овој проект беше многу повреден. Со голема подготвеност на партнери од Германија и Македонија ова веќе не беше сон, тоа беше многу успешна инвестиција.
-                                        Значи ова беше приказната за започнување на успесите на компанијата.</p>
+		                  			<p>Die Gründung des ersten Stromerzeugungsunternehmens mit Biogas erfolgte 2013. Wir entschieden uns, Strom aus Geflügelabfällen zu produzieren. Dies war eine Investition von 5 Millionen Euro. Der diesjährige Traum von diesem Projekt war jedoch wertvoller. Mit der großen Bereitschaft von Partnern aus Deutschland und Mazedonien war dies kein Traum, sondern eine sehr erfolgreiche Investition.
+                                        Dies war also die Geschichte des Beginns der Erfolge dieses Unternehmens.</p>
 		                  		</div>
 		                	</div>
 		              	</div> <!-- /.row -->
@@ -195,7 +195,7 @@
 
 		              	<div class="row text-center">
 		                	<div class="col-xs-12">
-		                  		<h2 class="section-title wow zoomIn">Запознајте го нашиот тим</h2>
+		                  		<h2 class="section-title wow zoomIn">Triff das Team</h2>
 		                	</div>
 		              	</div> <!-- /.row -->
 
@@ -206,7 +206,7 @@
 							            <img src="img/team/team-1.jpg" alt="">
 							            <figcaption class="figure-caption">
 							              <div class="figure-info">
-							                <h2> Gajur Abduramani <small>Генерален директор</small></h2>
+							                <h2> Gajur Abduramani <small>Generaldirektor</small></h2>
 							              </div>
 							            </figcaption>   
 							        </figure>
@@ -217,7 +217,7 @@
 							            <img src="img/team/team-2.jpg" alt="">
 							            <figcaption class="figure-caption">
 							              <div class="figure-info">
-							                <h2>Bujamin Sheapi<small>Електроинженер</small></h2>
+							                <h2>Bujamin Sheapi<small>Elektroingenieur</small></h2>
 							              </div>
 							            </figcaption>   
 							        </figure>
@@ -228,7 +228,7 @@
 							            <img src="img/team/team-3.jpg" alt="">
 							            <figcaption class="figure-caption">
 							              <div class="figure-info">
-							                <h2>Sabit Xhaferi <small>Машински инженер</small></h2>
+							                <h2>Sabit Xhaferi <small>Maschinenbauingenieur</small></h2>
 							              </div>
 							            </figcaption>   
 							        </figure>
@@ -238,7 +238,7 @@
 							            <img src="img/team/team-4.jpg" alt="">
 							            <figcaption class="figure-caption">
 							              <div class="figure-info">
-							                <h2>Lazim Jakupi <small>Машински инженер</small></h2>
+							                <h2>Lazim Jakupi <small>Maschinenbauingenieur</small></h2>
 							              </div>
 							            </figcaption>   
 							        </figure>
@@ -258,19 +258,19 @@
 							<div class="row text-center">
 						        <div class="col-xs-12 col-sm-3">
 						          <strong><span class="timer">5</span></strong>
-						          <span class="count-description">Години искуство </span>
+						          <span class="count-description">Jahre Erfahren</span>
 						        </div> <!-- /.col-sm-3 -->
 						        <div class="col-xs-12 col-sm-3">
 						          <strong><span class="timer">999</span>KW</strong>
-						          <span class="count-description">во часови</span>
+						          <span class="count-description">pro Stunde</span>
 						        </div><!-- /.col-sm-3 -->
 						        <div class="col-xs-12 col-sm-3">
 						          <strong><span class="timer">8</span>GW</strong>
-						          <span class="count-description">годишно</span>
+						          <span class="count-description">pro Jahr</span>
 						        </div><!-- /.col-sm-3 -->
 						        <div class="col-xs-12 col-sm-3">
-						          <strong><span class="timer">45</span>TОН</strong>
-						          <span class="count-description">материјал дневно</span>
+						          <strong><span class="timer">45</span>TONEN</strong>
+						          <span class="count-description">Material pro Tag</span>
 						        </div><!-- /.col-sm-3 -->
 					      	</div>
 			        	</div><!-- /.container -->
@@ -283,7 +283,7 @@
 			        <div class="container">
 		              	<div class="row text-center">
 		                	<div class="col-xs-12">
-		                  		<h2 class="section-title wow zoomIn">Нашите клиенти &amp; партнери</h2>
+		                  		<h2 class="section-title wow zoomIn">Unsere Kunden &amp; Partner</h2>
 		                	</div>
 		              	</div> <!-- /.row -->
 
@@ -307,8 +307,8 @@
 				<!-- call-to-action start -->
 		        <section class="call-to-action section-padding">
 			        <div class="container">
-				        <h2 class="wow zoomIn">Ние сме среќни да ви ги покажеме нашите производи.</h2>
-				        <a href="#" class="btn btn-primary btn-lg">Оди</a>
+				        <h2 class="wow zoomIn">Gerne zeigen wir Ihnen unsere Produkte.</h2>
+				        <a href="#" class="btn btn-primary btn-lg">Gehen</a>
 		            </div> <!-- /.container -->
 		        </section>
 		        <!-- call-to-action end -->
@@ -327,10 +327,10 @@
 							</div><!-- /.col-md-2 -->
 							<div class="col-sm-3 col-md-3">
 								<div class="footer-widget">
-									<h3>Локација</h3>
+									<h3>Ort</h3>
 									<address>
-                                        Тетово Македонија<br>
-                                        Требош<br>
+                                        Tetovo Mazedonien<br>
+									  Trebosh<br>
 									  <!-- Google Map Modal Trigger -->
 									  <a class="modal-map" data-toggle="modal" data-target="#cssMapModal" href="#">View on Google Maps</a>
 									</address>
@@ -342,7 +342,7 @@
 									    <div class="modal-content">
 									      <div class="modal-header">
 									        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									        <h4 class="modal-title" id="myModalLabel">Нашата локација</h4>
+									        <h4 class="modal-title" id="myModalLabel">unsere Position</h4>
 									      </div>
 									      <div class="modal-body">
 
@@ -357,7 +357,7 @@
 							</div><!-- /.col-md-2 -->
 							<div class="col-sm-3 col-md-3">
 								<div class="footer-widget">
-									<h3>Стапи во контакт</h3>
+									<h3>In Kontakt kommen</h3>
 									<a href="tel:76360575">+389 (0)76 360 575</a>
 									<a href="mailto:bujamin@vezesharri.com.mk">bujamin@vezesharri.com.mk</a>
 
@@ -366,7 +366,7 @@
 						<div class="row">
 							<div class="col-xs-12 text-center">
 								<div class="copyright">
-									<p>&copy; 2019 Elektrosharri.  Е крила и дизајнер : <a href="https://arlindabdurahmani.cf/" title="uiCookies">Арлинд Абдурахмани</a></p>
+									<p>&copy; 2019 Elektrosharri. Entwickelt und gestaltet von : <a href="https://arlindabdurahmani.cf/" title="uiCookies">Arlind Abdurahmani</a></p>
 								</div>
 							</div>
 						</div>
@@ -382,18 +382,17 @@
     	<!-- OFFCANVAS MENU -->
     	<div class="offcanvas-menu offcanvas-effect visible-xs">
 	        <button type="button" class="close" aria-hidden="true" data-toggle="offcanvas" id="off-canvas-close-btn">&times;</button>
-	        <h3>Мени на лента</h3>
+	        <h3>Sidebar Menu</h3>
 	        <ul class="list-unstyled">
-	            <li class="active"><a class="offcanvas-link" href="#page-top">Почетна<span class="sr-only">(current)</span></a></li>
-	            <li><a class="offcanvas-link" href="#about">За Нас</a></li>
-				<li><a class="offcanvas-link" href="#contact">Контакт</a></li>
-				<li><a class="offcanvas-link">Одбери Јазик</a></li>
-				<li><a class="" href="index.html">EН</a></li>
-				<li><a class="" href="de.html">ДЕ</a></li>
-				<li><a class="" href="al.html">АЛ</a></li>
-				<li><a class="" href="mk.html">МК</a></li>
-
-	        </ul>
+	            <li class="active"><a class="offcanvas-link" href="#page-top">Home<span class="sr-only">(current)</span></a></li>
+	            <li><a class="offcanvas-link" href="#about">Über Uns</a></li>
+				<li><a class="offcanvas-link" href="#contact">Kontakt</a></li>
+				<li><a class="offcanvas-link">Sprache auswählen</a></li>
+                <li><a class="" href="index.html">EN</a></li>
+                <li><a class="" href="de.html">DE</a></li>
+				<li><a class="" href="al.html">AL</a></li>
+				<li><a class="" href="mk.html">MK</a></li>
+			</ul>
       	</div><!-- .offcanvas-menu -->
 	</div><!-- /st-container -->
 
