--- a/al.html
+++ b/al.html
@@ -66,6 +66,7 @@
 									<li><a class="page-scroll" href="#contact">Kontakt</a></li>
 									<li><a class="page-scroll">|</a></li>
 									<li><a class="page-scroll" href="index.html">EN</a></li>
+									<li><a class="page-scroll" href="de.html">DE</a></li>
 									<li><a class="page-scroll" href="al.html">AL</a></li>
 									<li><a class="page-scroll" href="mk.html">MK</a></li>
 									
@@ -388,6 +389,7 @@
 				<li><a class="offcanvas-link" href="#contact">Kontakt</a></li>
 				<li><a class="offcanvas-link">Zgjidh Gjuhen</a></li>
 				<li><a class="" href="index.html">ЕN</a></li>
+				<li><a class="" href="de.html">DE</a></li>
 				<li><a class="" href="al.html">AL</a></li>
 				<li><a class="" href="mk.html">MK</a></li>
 	        </ul>
