--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 									<li><a class="page-scroll" href="#about">About</a></li>
 									<li><a class="page-scroll" href="#contact">Contact</a></li>
 									<li><a class="page-scroll">|</a></li>
+									<li><a class="page-scroll" href="index.html">EN</a></li>
+									<li><a class="page-scroll" href="de.html">DE</a></li>
 									<li><a class="page-scroll" href="al.html">AL</a></li>
 									<li><a class="page-scroll" href="mk.html">MK</a></li>
 									
@@ -110,7 +112,7 @@
 				            <div class="container">
 				                <div class="carousel-caption">
 
-				                    <h1 class="animated bounceIn">WE PRODUCE ELECTRICITY WITH HIGHT QUALITY BIOGAS</h1>
+				                    <h1 class="animated bounceIn">WE PRODUCE ELECTRICITY WITH HIGH QUALITY BIOGAS</h1>
 
 				                    <p class="lead animated bounceIn">We lightup your future</p>
 				                </div>
@@ -387,6 +389,7 @@
 				<li><a class="offcanvas-link" href="#contact">Contact</a></li>
 				<li><a class="offcanvas-link">Select Language</a></li>
 				<li><a class="" href="index.html">EN</a></li>
+				<li><a class="" href="de.html">DE</a></li>
 				<li><a class="" href="al.html">AL</a></li>
 				<li><a class="" href="mk.html">MK</a></li>
 			</ul>
