--- a/al.html
+++ b/al.html
@@ -360,7 +360,7 @@
 									<h3>Merrni në kontakt</h3>
 									<a href="tel:76360575">+389 (0)76 360 575</a>
 									<a href="mailto:bujamin@vezesharri.com.mk">bujamin@vezesharri.com.mk</a>
-									<a class="feedback-modal" data-toggle="modal" data-target="#feedModal" href="#">Send us your feedback</a>
+									<a class="feedback-modal" data-toggle="modal" data-target="#feedModal" href="#">Na dërgoni komentet tuaja</a>
 
 									<!-- Modal -->
 									<div class="modal fade" id="feedModal" tabindex="-1" role="dialog" aria-labelledby="feedModalLabel" aria-hidden="true">
@@ -368,20 +368,20 @@
 									    <div class="modal-content">
 									      <div class="modal-header">
 									        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									        <h4 class="modal-title" id="feedModalLabel">Send us your feedback</h4>
+									        <h4 class="modal-title" id="feedModalLabel">Na dërgoni komentet tuaja</h4>
 									      </div>
 									      <div class="modal-body">
 											<form id="contactForm" action="sendemail.php" method="POST">
 												<div class="row">
 													<div class="col-md-6">
 														<div class="form-group">
-														    <label for="name">Name</label>
+														    <label for="name">Emri</label>
 														    <input id="name" name="name" type="text" class="form-control"  required="" placeholder="Name">
 														</div>
 													</div>
 													<div class="col-md-6">
 													  <div class="form-group">
-													    <label for="email">Email address</label>
+													    <label for="email">Posta Elektronike</label>
 													    <input id="email" name="email" type="email" class="form-control" required="" placeholder="Email">
 													  </div>
 													</div>
@@ -389,24 +389,24 @@
 												<div class="row">
 													<div class="col-md-6">
 													  <div class="form-group">
-													    <label for="phone">Phone</label>
+													    <label for="phone">Telefoni</label>
 													    <input id="phone" name="phone" type="text" class="form-control" placeholder="Phone">
 													  </div>
 													</div>
 													<div class="col-md-6">
 													  <div class="form-group">
-													    <label for="subject">Subject</label>
+													    <label for="subject">Subjekti</label>
 													    <input id="subject" name="subject" type="text" class="form-control" required="" placeholder="Subject">
 													  </div>
 													</div>
 												</div>
 
 												<div class="form-group text-area">
-													<label for="message">Message</label>
+													<label for="message">Mesazhi</label>
 													<textarea id="message" name="message" class="form-control" rows="6" required="" placeholder="Message"></textarea>
 												</div>
 
-												<button type="submit" class="btn btn-primary">Send Message</button>
+												<button type="submit" class="btn btn-primary">Dergo Mesazhin</button>
 											</form>
 									      </div>
 									    </div>
