--- a/de.html
+++ b/de.html
@@ -360,7 +360,7 @@
 									<h3>In Kontakt kommen</h3>
 									<a href="tel:76360575">+389 (0)76 360 575</a>
 									<a href="mailto:bujamin@vezesharri.com.mk">bujamin@vezesharri.com.mk</a>
-									<a class="feedback-modal" data-toggle="modal" data-target="#feedModal" href="#">Send us your feedback</a>
+									<a class="feedback-modal" data-toggle="modal" data-target="#feedModal" href="#">Senden Sie uns Ihr Feedback</a>
 
 									<!-- Modal -->
 									<div class="modal fade" id="feedModal" tabindex="-1" role="dialog" aria-labelledby="feedModalLabel" aria-hidden="true">
@@ -368,7 +368,7 @@
 									    <div class="modal-content">
 									      <div class="modal-header">
 									        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									        <h4 class="modal-title" id="feedModalLabel">Send us your feedback</h4>
+									        <h4 class="modal-title" id="feedModalLabel">Senden Sie uns Ihr Feedback</h4>
 									      </div>
 									      <div class="modal-body">
 											<form id="contactForm" action="sendemail.php" method="POST">
@@ -381,7 +381,7 @@
 													</div>
 													<div class="col-md-6">
 													  <div class="form-group">
-													    <label for="email">Email address</label>
+													    <label for="email">E-Mail-Addresse</label>
 													    <input id="email" name="email" type="email" class="form-control" required="" placeholder="Email">
 													  </div>
 													</div>
@@ -389,24 +389,24 @@
 												<div class="row">
 													<div class="col-md-6">
 													  <div class="form-group">
-													    <label for="phone">Phone</label>
+													    <label for="phone">Telefon</label>
 													    <input id="phone" name="phone" type="text" class="form-control" placeholder="Phone">
 													  </div>
 													</div>
 													<div class="col-md-6">
 													  <div class="form-group">
-													    <label for="subject">Subject</label>
+													    <label for="subject">Gegenstand</label>
 													    <input id="subject" name="subject" type="text" class="form-control" required="" placeholder="Subject">
 													  </div>
 													</div>
 												</div>
 
 												<div class="form-group text-area">
-													<label for="message">Message</label>
+													<label for="message">Botschaft</label>
 													<textarea id="message" name="message" class="form-control" rows="6" required="" placeholder="Message"></textarea>
 												</div>
 
-												<button type="submit" class="btn btn-primary">Send Message</button>
+												<button type="submit" class="btn btn-primary">Nachricht senden</button>
 											</form>
 									      </div>
 									    </div>
