--- a/mk.html
+++ b/mk.html
@@ -375,13 +375,13 @@
 												<div class="row">
 													<div class="col-md-6">
 														<div class="form-group">
-														    <label for="name">Name</label>
+														    <label for="name">Име</label>
 														    <input id="name" name="name" type="text" class="form-control"  required="" placeholder="Name">
 														</div>
 													</div>
 													<div class="col-md-6">
 													  <div class="form-group">
-													    <label for="email">Email address</label>
+													    <label for="email">И-мејл адреса</label>
 													    <input id="email" name="email" type="email" class="form-control" required="" placeholder="Email">
 													  </div>
 													</div>
@@ -389,24 +389,24 @@
 												<div class="row">
 													<div class="col-md-6">
 													  <div class="form-group">
-													    <label for="phone">Phone</label>
+													    <label for="phone">Телефон</label>
 													    <input id="phone" name="phone" type="text" class="form-control" placeholder="Phone">
 													  </div>
 													</div>
 													<div class="col-md-6">
 													  <div class="form-group">
-													    <label for="subject">Subject</label>
+													    <label for="subject">Предмет</label>
 													    <input id="subject" name="subject" type="text" class="form-control" required="" placeholder="Subject">
 													  </div>
 													</div>
 												</div>
 
 												<div class="form-group text-area">
-													<label for="message">Message</label>
+													<label for="message">Порака</label>
 													<textarea id="message" name="message" class="form-control" rows="6" required="" placeholder="Message"></textarea>
 												</div>
 
-												<button type="submit" class="btn btn-primary">Send Message</button>
+												<button type="submit" class="btn btn-primary">Испрати порака</button>
 											</form>
 									      </div>
 									    </div>
