--- a/al.html
+++ b/al.html
@@ -371,7 +371,7 @@
 									        <h4 class="modal-title" id="feedModalLabel">Na dërgoni komentet tuaja</h4>
 									      </div>
 									      <div class="modal-body">
-											<form id="contactForm" action="sendemail.php" method="POST">
+											<form id="contactForm" action="POST" data-netlify="true">
 												<div class="row">
 													<div class="col-md-6">
 														<div class="form-group">
