--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<li><a class="page-scroll" href="#contact">Contact</a></li>
 									<li><a class="page-scroll">|</a></li>
 									<li><a class="page-scroll" href="index.html">EN</a></li>
-									<li><a class="page-scroll" href="de.html">DE</a></li>
+									<li><a class="page-scroll" href="de">DE</a></li>
 									<li><a class="page-scroll" href="al.html">AL</a></li>
 									<li><a class="page-scroll" href="mk.html">MK</a></li>
 									
