--- a/mk.html
+++ b/mk.html
@@ -65,10 +65,10 @@
 									<li><a class="page-scroll" href="#about">За Нас</a></li>
 									<li><a class="page-scroll" href="#contact">Контакт</a></li>
 									<li><a class="page-scroll">|</a></li>
-									<li><a class="page-scroll" href="index.html">ЕН</a></li>
-									<li><a class="page-scroll" href="de.html">ДЕ</a></li>
-									<li><a class="page-scroll" href="al.html">АЛ</a></li>
-									<li><a class="page-scroll" href="mk.html">МК</a></li>
+									<li><a class="page-scroll" href="index">ЕН</a></li>
+									<li><a class="page-scroll" href="de">ДЕ</a></li>
+									<li><a class="page-scroll" href="al">АЛ</a></li>
+									<li><a class="page-scroll" href="mk">МК</a></li>
 									
 								</ul>
 							</div><!-- /.navbar-collapse -->
@@ -441,10 +441,10 @@
 	            <li><a class="offcanvas-link" href="#about">За Нас</a></li>
 				<li><a class="offcanvas-link" href="#contact">Контакт</a></li>
 				<li><a class="offcanvas-link">Одбери Јазик</a></li>
-				<li><a class="" href="index.html">EН</a></li>
-				<li><a class="" href="de.html">ДЕ</a></li>
-				<li><a class="" href="al.html">АЛ</a></li>
-				<li><a class="" href="mk.html">МК</a></li>
+				<li><a class="" href="index">EН</a></li>
+				<li><a class="" href="de">ДЕ</a></li>
+				<li><a class="" href="al">АЛ</a></li>
+				<li><a class="" href="mk">МК</a></li>
 
 	        </ul>
       	</div><!-- .offcanvas-menu -->
