--- a/al.html
+++ b/al.html
@@ -65,10 +65,10 @@
 									<li><a class="page-scroll" href="#about">Per ne</a></li>
 									<li><a class="page-scroll" href="#contact">Kontakt</a></li>
 									<li><a class="page-scroll">|</a></li>
-									<li><a class="page-scroll" href="index.html">EN</a></li>
-									<li><a class="page-scroll" href="de.html">DE</a></li>
-									<li><a class="page-scroll" href="al.html">AL</a></li>
-									<li><a class="page-scroll" href="mk.html">MK</a></li>
+									<li><a class="page-scroll" href="index">EN</a></li>
+									<li><a class="page-scroll" href="de">DE</a></li>
+									<li><a class="page-scroll" href="al">AL</a></li>
+									<li><a class="page-scroll" href="mk">MK</a></li>
 									
 								</ul>
 							</div><!-- /.navbar-collapse -->
@@ -441,10 +441,10 @@
 	            <li><a class="offcanvas-link" href="#about">Për Ne </a></li>
 				<li><a class="offcanvas-link" href="#contact">Kontakt</a></li>
 				<li><a class="offcanvas-link">Zgjidh Gjuhen</a></li>
-				<li><a class="" href="index.html">ЕN</a></li>
-				<li><a class="" href="de.html">DE</a></li>
-				<li><a class="" href="al.html">AL</a></li>
-				<li><a class="" href="mk.html">MK</a></li>
+				<li><a class="" href="index">ЕN</a></li>
+				<li><a class="" href="de">DE</a></li>
+				<li><a class="" href="al">AL</a></li>
+				<li><a class="" href="mk">MK</a></li>
 	        </ul>
       	</div><!-- .offcanvas-menu -->
 	</div><!-- /st-container -->
