--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		                          <i class="fa fa-bars"></i>
 		                        </button>
 							    <!-- offcanvas-trigger-effects -->
-								<h1 class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a></h1>
+								<h1 class="logo"><a class="navbar-brand" href="index"><img src="img/logo.png" alt=""></a></h1>
 							</div>
 
 							<!-- Collect the nav links, forms, and other content for toggling -->
