--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta name="description" content="">
 	    <meta name="author" content="">
+	    <script async type="text/javascript" src="//userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/996a69e818923e488adc7b51e5d82fb0bae873b489f7467dbedbd254b5cc1b9e.js"></script>
 
 	    <title>Elektrosharri</title>
 	    <!-- Web Fonts -->
