--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta name="description" content="">
 	    <meta name="author" content="">
-	    <script async type="text/javascript" src="//userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/996a69e818923e488adc7b51e5d82fb0bae873b489f7467dbedbd254b5cc1b9e.js"></script>
+	    <!-- Start of LiveChat (www.livechatinc.com) code -->
+<script type="text/javascript">
+  window.__lc = window.__lc || {};
+  window.__lc.license = 11031972;
+  (function() {
+    var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+    lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+  })();
+</script>
+<noscript>
+<a href="https://www.livechatinc.com/chat-with/11031972/" rel="nofollow">Chat with us</a>,
+Developed by <a href="https://www.livechatinc.com/?welcome" rel="noopener nofollow" target="_blank">Arlind Abdurahmani</a>
+</noscript>
+<!-- End of LiveChat code -->
+
 
 	    <title>Elektrosharri</title>
 	    <!-- Web Fonts -->
