--- a/al.html
+++ b/al.html
@@ -77,7 +77,7 @@
 											<img border="0" alt="" src="img\lang_flags\al.png">
 											</a></li>
 
-											<li><a href="de">
+											<li><a href="mk">
 												<img border="0" alt="" src="img\lang_flags\mk.png">
 												</a></li>
 									
@@ -464,7 +464,7 @@
 						<img border="0" alt="" src="img\lang_flags\al.png">
 						</a></li>
 
-						<li><a href="de">
+						<li><a href="mk">
 							<img border="0" alt="" src="img\lang_flags\mk.png">
 							</a></li>
 	        </ul>
