--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 											<img border="0" alt="" src="img\lang_flags\al.png">
 											</a></li>
 
-											<li><a href="de">
+											<li><a href="mk">
 												<img border="0" alt="" src="img\lang_flags\mk.png">
 												</a></li>
 									
@@ -462,7 +462,7 @@
 						<img border="0" alt="" src="img\lang_flags\al.png">
 						</a></li>
 
-						<li><a href="de">
+						<li><a href="mk">
 							<img border="0" alt="" src="img\lang_flags\mk.png">
 							</a></li>
 
