--- a/al.html
+++ b/al.html
@@ -8,7 +8,7 @@
 	    <meta name="description" content="">
 	    <meta name="author" content="">
 
-	    <title>Elektrosharri</title>
+	    <title>Elektrosharri • Energji e Gjelbert</title>
 	    <!-- Web Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300' rel='stylesheet' type='text/css'>
 	    <!-- Flaticon CSS -->
