--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta name="description" content="">
 	    <meta name="author" content="">
-	    <title>Elektrosharri</title>
+	    <title>Elektrosharri • Green Energy</title>
 	    <!-- Web Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300' rel='stylesheet' type='text/css'>
 	    <!-- Flaticon CSS -->
