--- a/mk.html
+++ b/mk.html
@@ -6,9 +6,10 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta name="description" content="">
-	    <meta name="author" content="">
+		<meta name="author" content="">
+		
 
-	    <title>Elektrosharri</title>
+	    <title>Elektrosharri • Зелена енергија</title>
 	    <!-- Web Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300' rel='stylesheet' type='text/css'>
 	    <!-- Flaticon CSS -->
