--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	    <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="theme-color" content="#0ba14b">
 	    <meta name="description" content="">
-	    <meta name="author" content="">
+		<meta name="author" content="">
+		<meta name="theme-color" content="#0ba14b"/>
 	    <title>Elektrosharri • Green Energy</title>
 	    <!-- Web Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300' rel='stylesheet' type='text/css'>
