--- a/mk.html
+++ b/mk.html
@@ -7,9 +7,9 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta name="description" content="">
 		<meta name="author" content="">
+		<meta name="theme-color" content="#0ba14b"/>
+		<title>Elektrosharri • Зелена енергија</title>
 		
-
-	    <title>Elektrosharri • Зелена енергија</title>
 	    <!-- Web Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300' rel='stylesheet' type='text/css'>
 	    <!-- Flaticon CSS -->
