--- a/de.html
+++ b/de.html
@@ -4,8 +4,10 @@
 	<head>
 	    <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="og:title" content="Elektrosharri"/>
+		<meta name="description" content="We Produce Green Energy">
+		<meta name="keywords" content="electricity , company , bio ,bioenergy , energy , save , nature , envirement , business , work , successes"/>
 		<meta name="author" content="">
 		<meta name="theme-color" content="#0ba14b"/>
 		<title>Elektrosharri • Grüne Energie</title>
