--- a/index.html
+++ b/index.html
@@ -482,10 +482,12 @@
     <div class="modal-content">
       <div class="modal-body">
         <button data-dismiss="modal" class="close">&times;</button>
-        <h4>Login</h4>
+		<a class="navbar-brand" href="index"><img src="img/logo.png" alt=""></a>
+		<br>
+		<br>
         <form name="login">
-				Username<input type="text" name="userid" class="username form-control" />
-				Password<input type="password" name="pswrd" class="password form-control" />
+				<input type="text" name="userid" class="username form-control" placeholder="Username"/>
+				<input type="password" name="pswrd" class="password form-control" placeholder="Password"/>
 				<br>
 				<input type="button" onclick="check(this.form)" value="Login" class="btn login"/>
 				</form>
