--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 						<div class="row">
 							<div class="col-xs-12 text-center">
 								<div class="copyright">
-									<p>&copy; 2019 Elektrosharri.  Developed and Designed by : <a href="https://arlindabdurahmani.cf/" title="uiCookies">Arlind Abdurahmani</a></p>
+									<p>&copy; 2019 Elektrosharri.  Developed and Designed by : <a href="https://www.facebook.com/orangestuddio/" title="uiCookies">OrangeStduio</a></p>
 								</div>
 							</div>
 						</div>
