--- a/al.html
+++ b/al.html
@@ -290,7 +290,62 @@
 			        	</div><!-- /.container -->
 		        	</div><!-- /.css-overlay -->
 		        </section><!-- /.counter-section -->
-		        <!-- counter end -->
+				<!-- counter end -->
+				
+				<!-- testimonial start -->
+				<section class="testimonial-section section-padding">
+					<div class="container">
+						  <div class="row text-center">
+							<div class="col-xs-12">
+								  <h2 class="section-title wow zoomIn">Cfarë mendojnë punonjësit tane për kompaninë tonë</h2>
+							</div>
+						  </div> <!-- /.row -->
+
+						  <div class="row content-row">
+							<div class="col-xs-12">
+								<div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
+								  <!-- Indicators -->
+								  <ol class="carousel-indicators">
+									<li data-target="#testimonial-carousel" data-slide-to="0" class="active"></li>
+									<li data-target="#testimonial-carousel" data-slide-to="1"></li>
+									<li data-target="#testimonial-carousel" data-slide-to="2"></li>
+								  </ol>
+
+								  <!-- Wrapper for slides -->
+								  <div class="carousel-inner" role="listbox">
+									<div class="item active">
+									  <img src="img/team/team-2.jpg" alt="">
+									  <div class="carousel-caption">
+										<p>Deri më tani, pjesa më e preferuar e punës sime janë njerëzit me të cilët punoj. Ata janë profesionistë dhe kompetent në atë që bëjnë. Dhe më së shumti, ata janë argëtues.</p>
+
+										<span class="source-title">Bujamin Sheapi, Inxhinier i elektrikës</span>
+									  </div>
+									</div>
+									<div class="item">
+									  <img src="img/team/team-3.jpg" alt="">
+									  <div class="carousel-caption">
+										<p>Kjo është ndërmarrja ëndërruese në të cilën mund të punojë çdo Inxhinier Mekanik. Kemi menaxherë të shkëlqyeshëm, ambient të shkëlqyeshëm pune, kolegë të shkëlqyeshëm.</p>
+
+										<span class="source-title">Sabit Xhaferi,Inxhinier te Mekanikës</span>
+									  </div>
+									</div>
+									<div class="item">
+									  <img src="img/team/team-4.jpg" alt="">
+									  <div class="carousel-caption">
+										<p>Ajo që më pëlqen në lidhje me këtë kompani është shumë afër nga shtëpia ime dhe kur punoj ndihem si ne shtëpi gjithashtu.</p>
+
+										<span class="source-title">Lazim Jakupi,Inxhinier te Mekanikës</span>
+									  </div>
+									</div>
+
+								  </div>
+
+								</div>
+							</div>
+						  </div> <!-- /.row -->
+					</div> <!-- /.container -->
+				</section>
+				<!-- testimonial end -->
 
 		        <!-- partner start -->
 		        <section class="partner-section section-padding">
@@ -433,7 +488,7 @@
 						<div class="row">
 							<div class="col-xs-12 text-center">
 								<div class="copyright">
-									<p>&copy; 2019 Elektrosharri.  E krijuar dhe dizajnuar nga : <a href="https://arlindabdurahmani.cf/" title="uiCookies">Arlind Abdurahmani</a></p>
+									<p>&copy; 2019 Elektrosharri.  E krijuar dhe dizajnuar nga : <a href="https://haxhibaba.ch" title="uiCookies">Haxhibaba AG</a></p>
 								</div>
 							</div>
 						</div>
