--- a/de.html
+++ b/de.html
@@ -290,7 +290,62 @@
 			        	</div><!-- /.container -->
 		        	</div><!-- /.css-overlay -->
 		        </section><!-- /.counter-section -->
-		        <!-- counter end -->
+				<!-- counter end -->
+				
+				<!-- testimonial start -->
+				<section class="testimonial-section section-padding">
+					<div class="container">
+						  <div class="row text-center">
+							<div class="col-xs-12">
+								  <h2 class="section-title wow zoomIn">Was denken die Mitarbeiter über unser Unternehmen?</h2>
+							</div>
+						  </div> <!-- /.row -->
+
+						  <div class="row content-row">
+							<div class="col-xs-12">
+								<div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
+								  <!-- Indicators -->
+								  <ol class="carousel-indicators">
+									<li data-target="#testimonial-carousel" data-slide-to="0" class="active"></li>
+									<li data-target="#testimonial-carousel" data-slide-to="1"></li>
+									<li data-target="#testimonial-carousel" data-slide-to="2"></li>
+								  </ol>
+
+								  <!-- Wrapper for slides -->
+								  <div class="carousel-inner" role="listbox">
+									<div class="item active">
+									  <img src="img/team/team-2.jpg" alt="">
+									  <div class="carousel-caption">
+										<p>Bei weitem der beliebteste Teil meiner Arbeit sind die Menschen, mit denen ich zusammenarbeite. Sie sind professionell und kompetent in dem, was sie tun. Und vor allem machen sie Spaß.</p>
+
+										<span class="source-title">Bujamin Sheapi, Elektroingenieurс</span>
+									  </div>
+									</div>
+									<div class="item">
+									  <img src="img/team/team-3.jpg" alt="">
+									  <div class="carousel-caption">
+										<p>Dies ist die Traumfirma, in der jeder Maschinenbauingenieur arbeiten kann. Großartige Manager, ein großartiges Arbeitsumfeld, großartige Kollegen.</p>
+
+										<span class="source-title">Sabit Xhaferi,Maschinenbauingenieur</span>
+									  </div>
+									</div>
+									<div class="item">
+									  <img src="img/team/team-4.jpg" alt="">
+									  <div class="carousel-caption">
+										<p>Was ich an dieser Firma mag, ist ganz in der Nähe von meinem Haus und ihnen und auch während der Arbeit fühlt es sich wie zu Hause an.</p>
+
+										<span class="source-title">Lazim Jakupi,Maschinenbauingenieur</span>
+									  </div>
+									</div>
+
+								  </div>
+
+								</div>
+							</div>
+						  </div> <!-- /.row -->
+					</div> <!-- /.container -->
+				</section>
+				<!-- testimonial end -->
 
 		        <!-- partner start -->
 		        <section class="partner-section section-padding">
@@ -433,7 +488,7 @@
 						<div class="row">
 							<div class="col-xs-12 text-center">
 								<div class="copyright">
-									<p>&copy; 2019 Elektrosharri. Entwickelt und gestaltet von : <a href="https://arlindabdurahmani.cf/" title="uiCookies">Arlind Abdurahmani</a></p>
+									<p>&copy; 2019 Elektrosharri. Entwickelt und gestaltet von : <a href="https://haxhibaba.ch/" title="uiCookies">Haxhibaba AG</a></p>
 								</div>
 							</div>
 						</div>
