--- a/mk.html
+++ b/mk.html
@@ -290,7 +290,62 @@
 			        	</div><!-- /.container -->
 		        	</div><!-- /.css-overlay -->
 		        </section><!-- /.counter-section -->
-		        <!-- counter end -->
+				<!-- counter end -->
+				
+				<!-- testimonial start -->
+				<section class="testimonial-section section-padding">
+					<div class="container">
+						  <div class="row text-center">
+							<div class="col-xs-12">
+								  <h2 class="section-title wow zoomIn">Што мислат вработените за нашата компанија</h2>
+							</div>
+						  </div> <!-- /.row -->
+
+						  <div class="row content-row">
+							<div class="col-xs-12">
+								<div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
+								  <!-- Indicators -->
+								  <ol class="carousel-indicators">
+									<li data-target="#testimonial-carousel" data-slide-to="0" class="active"></li>
+									<li data-target="#testimonial-carousel" data-slide-to="1"></li>
+									<li data-target="#testimonial-carousel" data-slide-to="2"></li>
+								  </ol>
+
+								  <!-- Wrapper for slides -->
+								  <div class="carousel-inner" role="listbox">
+									<div class="item active">
+									  <img src="img/team/team-2.jpg" alt="">
+									  <div class="carousel-caption">
+										<p>Далеку најомилен дел од мојата работа се луѓето со кои работам. Тие се професионални и компетентни во она што го прават. И најмногу од сè, тие се забавни.</p>
+
+										<span class="source-title">Бујамин Шеапи, Електротехничар</span>
+									  </div>
+									</div>
+									<div class="item">
+									  <img src="img/team/team-3.jpg" alt="">
+									  <div class="carousel-caption">
+										<p>Ова е компанија за соништа во која може да работи секој машински инженер. Здрави менаџери, одлично опкружување за работа, одлични колеги.</p>
+
+										<span class="source-title">Сабит Дзафери, Машински инженер</span>
+									  </div>
+									</div>
+									<div class="item">
+									  <img src="img/team/team-4.jpg" alt="">
+									  <div class="carousel-caption">
+										<p>Она што ми се допаѓа во врска со оваа компанија е многу близу од мојата куќа и тие, а исто така и додека работам се чувствува како дома исто така.</p>
+
+										<span class="source-title">Лазим Јакупи, машински инженер</span>
+									  </div>
+									</div>
+
+								  </div>
+
+								</div>
+							</div>
+						  </div> <!-- /.row -->
+					</div> <!-- /.container -->
+				</section>
+				<!-- testimonial end -->
 
 		        <!-- partner start -->
 		        <section class="partner-section section-padding">
@@ -433,7 +488,7 @@
 						<div class="row">
 							<div class="col-xs-12 text-center">
 								<div class="copyright">
-									<p>&copy; 2019 Elektrosharri.  Е крила и дизајнер : <a href="https://arlindabdurahmani.cf/" title="uiCookies">Арлинд Абдурахмани</a></p>
+									<p>&copy; 2019 Elektrosharri.  Е крила и дизајнер : <a href="https://haxhibaba.ch" title="uiCookies">Хаџибаба АГ</a></p>
 								</div>
 							</div>
 						</div>
