haxhibaba ag ----> Haxhibaba GmbH

--- a/al.html
+++ b/al.html
@@ -488,7 +488,7 @@
 						<div class="row">
 							<div class="col-xs-12 text-center">
 								<div class="copyright">
-									<p>&copy; 2019 Elektrosharri.  E krijuar dhe dizajnuar nga : <a href="https://haxhibaba.ch" title="uiCookies">Haxhibaba AG</a></p>
+									<p>&copy; 2019 Elektrosharri.  E krijuar dhe dizajnuar nga : <a href="https://haxhibaba.ch" title="uiCookies">Haxhibaba GmbH</a></p>
 								</div>
 							</div>
 						</div>
