--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 						<div class="row">
 							<div class="col-xs-12 text-center">
 								<div class="copyright">
-									<p>&copy; 2019 Elektrosharri.  Developed and Designed by : <a href="https://haxhibaba.ch" title="uiCookies">Haxhibaba AG</a></p>
+									<p>&copy; 2019 Elektrosharri.  Developed and Designed by : <a href="https://haxhibaba.ch" title="uiCookies">Haxhibaba GmbH</a></p>
 								</div>
 							</div>
 						</div>
